--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "red-contrib-eksido-monoloop",
+  "name": "node-red-contrib-eksido-monoloop",
   "version": "0.1.25",
   "description": "This a Node-RED node for Monoloop - Onsite personalisation for MadTech Enterprise Solutions. Proudly developed and powered by Eksido ( https://eksido.com )",
   "main": "node.js",
@@ -8,7 +8,7 @@
   },
   "node-red": {
     "nodes": {
-      "eksido-monoloop": "node.js"
+      "monoloop": "node.js"
     }
   },
   "repository": {
