--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-eksido-monoloop",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "This a Node-RED node for Monoloop",
   "main": "monoloop.js",
   "scripts": {
@@ -16,11 +16,13 @@
     "url": "git+https://github.com/eksido/node-red-contrib-eksido-monoloop.git"
   },
   "keywords": [
+    "node-red",
     "monoloop",
     "madtech",
     "enterprise",
     "connected",
-    "integration"
+    "integration",
+    "salesforce"
   ],
   "author": "Franz Malten Buemann <fmb@eksido.com>",
   "license": "MIT",
