--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-eksido-monoloop",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "This a Node-RED node for Monoloop",
   "main": "monoloop.js",
   "scripts": {
@@ -24,7 +24,7 @@
     "integration",
     "salesforce"
   ],
-  "author": "Franz Malten Buemann <fmb@eksido.com>",
+  "author": "Franz Malten Buemann <fmb@eksido.com> (https://eksido.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/eksido/node-red-contrib-eksido-monoloop/issues"
